# VLI

./: .gitignore  .impeccable.md  BrainStorm.md  LICENSE  README.md  SPEC.md
.cursor/commands/: build.md  code-simplify.md  plan.md  review.md  ship.md  spec.md  test.md
.cursor/rules/: caveman-ultra-default.mdc  powershell-cargo-stderr.mdc
jarvis/: .gitignore  README.md  editor.html  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
jarvis/.cargo/: config.toml
jarvis/scripts/: build-tauri-with-whisper-gpu.ps1  build-tauri-with-whisper-gpu.sh  cargo-win-env.mjs  download-model.ps1  download-model.sh  download-oww-model.ps1  download-wake-models.ps1  fetch-wake-models.config.mjs  fetch-wake-models.config.test.mjs  fetch-wake-models.mjs  sync-cargo-win-env.mjs  tauri-whisper-gpu-bindgen-win.test.mjs  tauri-whisper-gpu-launch.mjs  tauri-whisper-gpu-launch.test.mjs  tauri-whisper-gpu-win-env.test.mjs  tauri-whisper-gpu-win-sdk.mjs  tauri-whisper-gpu-win-sdk.test.mjs  tauri-whisper-gpu.mjs
jarvis/scripts/whisper-gpu/: detect.mjs  detect.test.mjs  launch.mjs  preflight.mjs  preflight.test.mjs  run-tauri-cpu.mjs  run-tauri.mjs  win-env.mjs  win-sdk.mjs
jarvis/src/: App.css  App.tsx  EditorRoot.css  EditorRoot.tsx  editorMain.tsx  glassTokens.css  main.tsx  types.ts
jarvis/src-tauri/: .gitignore  Cargo.toml  MIGRATIONS.md  tauri.conf.json
jarvis/src-tauri/.cargo/: config.toml
jarvis/src-tauri/capabilities/: default.json
jarvis/src-tauri/icons/: icon.icns
jarvis/src-tauri/src/: editor_window_win.rs  hud.rs  hud_window_win.rs  keychain.rs  lib.rs  tray.rs  window_frame_win.rs
jarvis/src-tauri/src/ai/: mod.rs
jarvis/src-tauri/src/apps/: mod.rs  scanner_windows.rs
jarvis/src-tauri/src/audio/: capture.rs  mod.rs  stt.rs  tts.rs
jarvis/src-tauri/src/audio/transcription/: mod.rs  os.rs  remote.rs
jarvis/src-tauri/src/audio/wake/: mod.rs  oww.rs  thread.rs
jarvis/src-tauri/src/audio/wake/porcupine/: mod.rs  stub.rs  windows.rs
jarvis/src-tauri/src/commands/: executor.rs  matcher.rs  mod.rs
jarvis/src-tauri/src/db/: app_index.rs  mod.rs  models.rs  settings.rs
jarvis/src/components/Settings/: SettingsPanel.tsx  settingsNav.ts
jarvis/src/components/editor/: ActionCard.tsx  ActionChain.logic.test.ts  ActionChain.logic.ts  ActionChain.tsx  CommandDraftRow.test.tsx  CommandFormulaRow.clearableInput.test.tsx  CommandFormulaRow.followUpLayout.test.tsx  CommandFormulaRow.tsx  CommandFormulaRow.variables.test.ts  CommandsTab.tsx  EditorCloseXIcon.tsx  NodeForm.logic.ts  NodeForm.test.ts  NodeForm.tsx  NodeList.logic.test.ts  NodeList.logic.ts  NodeList.test.ts  NodeList.tsx  SettingsPanel.logic.test.ts  SettingsPanel.logic.ts  SettingsPanel.tsx  actionCatalog.ts  appIndexInvoke.test.ts  appIndexInvoke.ts  formulaRow.logic.test.ts  formulaRow.logic.ts
jarvis/src/components/hud/: HudPanel.logic.test.ts  HudPanel.logic.ts  HudPanel.tsx  hudMotion.ts  hudOverlayPhases.test.ts  hudOverlayPhases.ts
jarvis/src/components/ui/: EditorSelect.tsx
jarvis/src/hooks/: useDebounced.ts
jarvis/src/store/: editorStore.ts  hudIpc.test.ts  hudIpc.ts  hudReducer.test.ts  hudReducer.ts  hudStore.ts  settingsStore.ts
jarvis/src/styles/: glassTokens.test.ts
jarvis/src/utils/: userErrors.test.ts  userErrors.ts
references/: CmdRowPlan.md  Phase3Plan.md  Phase3Todo.md  Phase4Plan.md  Phase4Todo.md  SPEC.md  plan-phase2.md  plan.md  todo.md
tasks/: plan.md  todo.md
