[package]
name = "jarvis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["porcupine"]
# OpenWakeWord backend (T4-2); default build excludes ONNX stack.
oww = ["dep:ort", "dep:ndarray"]
porcupine = ["dep:libloading"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
cpal = "0.15"
whisper-rs = "0.14"
log = "0.4"
env_logger = "0.11"
rapidfuzz = "0.5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = "2.3"
libloading = { version = "0.8", optional = true }
# ONNX Runtime via ort (OpenWakeWord); only linked when `oww` feature is enabled.
ort = { version = "2.0.0-rc.12", optional = true, default-features = true, features = ["download-binaries", "ndarray"] }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

