[package]
name = "jarvis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Ship both wake backends: Porcupine (Picovoice) + OpenWakeWord (ONNX via ort).
default = ["porcupine", "oww"]
oww = ["dep:ort", "dep:ndarray"]
porcupine = ["dep:libloading"]
# Optional Whisper.cpp GPU backends (requires matching SDK/toolchain when building).
# Example: `cargo build --features whisper-vulkan` (Vulkan SDK on PATH).
whisper-vulkan = ["whisper-rs/vulkan"]
whisper-cuda = ["whisper-rs/cuda"]
whisper-metal = ["whisper-rs/metal"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
cpal = "0.15"
whisper-rs = "0.14"
log = "0.4"
env_logger = "0.11"
rapidfuzz = "0.5.0"
keyring = "2.3"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
base64 = "0.22"
url = "2"
libloading = { version = "0.8", optional = true }
# ONNX Runtime via ort (OpenWakeWord); only linked when `oww` feature is enabled.
ort = { version = "2.0.0-rc.12", optional = true, default-features = true, features = ["download-binaries", "ndarray"] }
ndarray = { version = "0.17", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile = "3"

